--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^21.8.13",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-i18next": "^11.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
